package princess.connect.baseClass;

public class BasicStats {
    protected int _hitpoints ;
    protected int _physicalAttack;
    protected int _magicAttack;
    protected int _physicalDefense;
    protected int _magicDefense;
    protected int _physicalCritical;
    protected int _magicCritical;
    protected int _evasion;
    protected int _accuracy;
    protected int _hpRecoveryRate;
    protected int _tpRecoveryRate;
    protected int _waveHpRecovery;
    protected int _waveTpRecovery;
    protected int _hpReduceRate;
    protected int _tpReduceRate;
}
